Added the nav link for more news and announcements, cleared float

--- a/index.html
+++ b/index.html
@@ -39,7 +39,24 @@
                 <a href="#">Contact us</a>
             </nav>
 
-            <article class="right-side">right side content</article>
+            <article class="right-side">
+                <img src="files/women_w_pottery.jpg" alt="Women holding pottery"/>
+                <h2>News &amp; Announcements</h2>
+
+                <p>
+                    <span>The History of Women & Gender in Mexico:</span> dmwalkdmlkawmdlaKDMALWfdsfposdkfposdk
+                    fpdskfpodskfpo dkfpodskfpods pokfposdfpodsfko dofkdfkfdspo fkdospkfsdo pkfdsopkfposkf podkfpodskf
+                    fpodskfpodskfpo dskfpodskfpodsk fpodskfpodskfsdpokf pfkposfposdkfp osdkfpookfp odsfpodsok dpskpod
+                    fodskfposdfkposd kfposdkfpsdok fposfkdspok fpodskfd spokfdposkdsk ffsdodfksdpdofk fspdokfspdokfpo
+                    dsfsdkfsdmfsdfksd fopdsmfsdmff sdkfskfmkdsfmo ksdmfodksfm dskmfkosdfo kdsmfokds mfoksdmfd kmffoksd
+                </p>
+
+                <p class="learn-more">
+                    <a href="#"> >> More news & announcements</a>
+                </p>
+            </article>
+
+            <div class="clear-float"></div>
         </div>
 
         <div class="nav bottom-nav">
